--- a/_config.yml
+++ b/_config.yml
@@ -86,18 +86,18 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 # Blog
 # -----------------------------------------------------------------------------
 
-#blog_name: al-folio # blog_name will be displayed in your blog page
-#blog_description: a simple whitespace theme for academics
-#permalink: /blog/:year/:title/
-#lsi: false # produce an index for related posts
+blog_name: al-folio # blog_name will be displayed in your blog page
+blog_description: a simple whitespace theme for academics
+permalink: /blog/:year/:title/
+lsi: false # produce an index for related posts
 
 # Pagination
-#pagination:
-#  enabled: true
+pagination:
+  enabled: true
 
-#related_blog_posts:
-#  enabled: true
-#  max_related: 5
+related_blog_posts:
+  enabled: true
+  max_related: 5
 
 # Giscus comments (RECOMMENDED)
 # Follow instructions on https://giscus.app/ to setup for your repo to fill out the information below.
@@ -143,15 +143,15 @@ newsletter:
 # Collections
 # -----------------------------------------------------------------------------
 
-#collections:
-#  books:
-#    output: true
-#  news:
-#    defaults:
-#      layout: post
-#    output: true
-#  projects:
-#    output: true
+collections:
+  books:
+    output: true
+  news:
+    defaults:
+      layout: post
+    output: true
+  projects:
+    output: true
 
 # -----------------------------------------------------------------------------
 # Jekyll settings
@@ -192,9 +192,6 @@ exclude:
   - README.md
   - readme_preview/
   - vendor
-  - _posts/
-  - _pages/blog.md
-  - _pages/dropdown.md
 keep_files:
   - CNAME
   - .nojekyll
@@ -249,18 +246,18 @@ terser:
 # Jekyll Archives
 # -----------------------------------------------------------------------------
 
-#jekyll-archives:
-  #posts:
-  #  enabled: [year, tags, categories] # enables year, tag and category archives (remove if you need to disable one of them).
-  #  permalinks:
-  #    year: "/blog/:year/"
-  #    tags: "/blog/:type/:name/"
-  #    categories: "/blog/:type/:name/"
-  #books:
-  #  enabled: [year, tags, categories] # enables year, tag and category archives (remove if you need to disable one of them).
+jekyll-archives:
+  posts:
+    enabled: [year, tags, categories] # enables year, tag and category archives (remove if you need to disable one of them).
+    permalinks:
+      year: "/blog/:year/"
+      tags: "/blog/:type/:name/"
+      categories: "/blog/:type/:name/"
+  books:
+    enabled: [year, tags, categories] # enables year, tag and category archives (remove if you need to disable one of them).
 
-#display_tags: ["formatting", "images", "links", "math", "code", "blockquotes"] # these tags will be displayed on the front page of your blog
-#display_categories: ["external-services"] # these categories will be displayed on the front page of your blog
+display_tags: ["formatting", "images", "links", "math", "code", "blockquotes"] # these tags will be displayed on the front page of your blog
+display_categories: ["external-services"] # these categories will be displayed on the front page of your blog
 
 # -----------------------------------------------------------------------------
 # Jekyll Scholar
@@ -294,10 +291,10 @@ scholar:
 # Display different badges withs stats for your publications
 # Customize badge behavior in _layouts/bib.liquid
 enable_publication_badges:
-  altmetric: false # Altmetric badge (Customization options: https://badge-docs.altmetric.com/index.html)
-  dimensions: false # Dimensions badge (Customization options: https://badge.dimensions.ai/)
-  google_scholar: false # Google Scholar badge (https://scholar.google.com/intl/en/scholar/citations.html)
-  inspirehep: false # Inspire HEP badge (https://help.inspirehep.net/knowledge-base/citation-metrics/)
+  altmetric: true # Altmetric badge (Customization options: https://badge-docs.altmetric.com/index.html)
+  dimensions: true # Dimensions badge (Customization options: https://badge.dimensions.ai/)
+  google_scholar: true # Google Scholar badge (https://scholar.google.com/intl/en/scholar/citations.html)
+  inspirehep: true # Inspire HEP badge (https://help.inspirehep.net/knowledge-base/citation-metrics/)
 
 # Filter out certain bibtex entry keywords used internally from the bib output
 filtered_bibtex_keywords:
